Sabrina/update api interface (#40)
- update the swagger to pick up the latest changes from reducing the
response body's footprint
- Update APIs and tests to match the new interface.

TODO: hide the idempotent comment from the description (maybe using a
vendor extension instead rather than hard coding in descriptions?) I
don't feel like it's a blocker here to get this version out
